finished the bar graph section.

--- a/Project/components/Dashboard.html
+++ b/Project/components/Dashboard.html
@@ -1,13 +1,39 @@
 <div ng-cloak>
+  Height: <input type="text" ng-model="$ctrl.specs.height"><br>
   <span>
     <svg xmlns="http://www.w3.org/2000/svg" width="250" height="250" >
+      <g  ng-repeat="bar in $ctrl.specs.bars">
+        <text ng-attr-x="0"
+              ng-attr-y="{{((1 * $ctrl.specs.height + $ctrl.specs.padding) * $index) + ($ctrl.specs.height/2) + ($ctrl.specs.fontHeight/2)}}"
+              text-anchor="start"
+              style="font-family: arial; font-size:10pt">
+                {{bar.text}}
+        </text>
 
-      <rect ng-repeat="bar in $ctrl.specs track by $index"
-        x="0" ng-attr-y="{{($ctrl.height + 5) * $index}}" fill="{{bar.color}}"
-        ng-attr-width="{{bar.width.toString()}}" ng-attr-height="{{$ctrl.height}}"/>
+        <rect ng-attr-x="{{$ctrl.specs.labelWidth}}"
+              ng-attr-y="{{(1 * $ctrl.specs.height + $ctrl.specs.padding) * $index}}"
+              fill="{{bar.color}}"
+              ng-attr-width="{{bar.width}}" ng-attr-height="{{$ctrl.specs.height}}"/>
+      </g>
+        <line ng-attr-x1="{{$ctrl.specs.labelWidth}}"
+              ng-attr-y1="0"
+              ng-attr-x2="{{$ctrl.specs.labelWidth}}"
+              ng-attr-y2="{{$ctrl.specs.overallHeight}}"
+              style="stroke: black; stroke-width:2px"/>
 
-      <line x1="0" y1="0" x2="0" y2="105" style="stroke: black; stroke-width:2px"/>
-      <line x1="0" y1="105" x2="70" y2="105" style="stroke: black; stroke-width:2px"/>
+        <line ng-attr-x1="{{$ctrl.specs.labelWidth}}"
+              ng-attr-y1="{{$ctrl.specs.overallHeight}}"
+              ng-attr-x2="{{$ctrl.specs.maxWidth + $ctrl.specs.labelWidth}}"
+              ng-attr-y2="{{$ctrl.specs.overallHeight}}"
+              style="stroke: black; stroke-width:2px"/>
+
+        <text ng-repeat="gradient in $ctrl.specs.gradients"
+              ng-attr-x="{{$ctrl.specs.labelWidth + gradient.offset}}"
+              ng-attr-y="{{((1 * $ctrl.specs.height + $ctrl.specs.padding) * $ctrl.specs.bars.length) + $ctrl.specs.fontHeight + 3}}"
+              text-anchor="middle" style="font-family: arial; font-size:10pt">
+                {{gradient.text}}
+        </text>
+
     </svg>
   </span>
 </div>
